--- a/public/modules/beers/css/beers.css
+++ b/public/modules/beers/css/beers.css
@@ -39,14 +39,14 @@
 /* Main menu in list view */
 .navbar{min-height:0 !important;}
 .mainMenu {
-  background: #ad8f5f; /* Old browsers */
-  background: -moz-linear-gradient(top,  #ad8f5f 0%, #705e34 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ad8f5f), color-stop(100%,#705e34)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #ad8f5f 0%,#705e34 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #ad8f5f 0%,#705e34 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #ad8f5f 0%,#705e34 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #ad8f5f 0%,#705e34 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ad8f5f', endColorstr='#705e34',GradientType=0 ); /* IE6-9 */
+  background: #AF9B75; /* Old browsers */
+  background: -moz-linear-gradient(top,  #AF9B75 0%, #7A6C52 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#AF9B75), color-stop(100%,#7A6C52)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #AF9B75 0%,#7A6C52 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #AF9B75 0%,#7A6C52 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #AF9B75 0%,#7A6C52 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #AF9B75 0%,#7A6C52 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#AF9B75', endColorstr='#7A6C52',GradientType=0 ); /* IE6-9 */
   box-shadow: 0px 2px 6px rgba(0,0,0,0.2);
   padding:8px;
 }
@@ -56,6 +56,10 @@
 }
 .mainMenu .btn-danger {
   margin-right:0;
+}
+
+.dropdown-menu {
+  background: rgba(30,20,0,0.5);
 }
 
 /* Page header styling, not used in list-view */
