Ordering works wholly. Begun working on Brewery DB API connection.

--- a/public/modules/beers/css/beers.css
+++ b/public/modules/beers/css/beers.css
@@ -4,8 +4,8 @@
 
 /* Darken this shit up >:( */
 .content, body {
-  background: #efefef;
-  color: #fff;
+  background: #EFE9E1;
+  color: rgb(82,75,60);
 }
 
 /* Make list view fullscreen */
