--- a/public/modules/beers/views/list-beers.client.view.html
+++ b/public/modules/beers/views/list-beers.client.view.html
@@ -9,15 +9,13 @@
 
             <!-- Button itself, changes the order direction when pressed -->
             <button ng-click="direction=direction=='+'?'-':'+';authentication.user.orderPreference=direction+button.param;saveOrder();"
-                    ng-class="(direction==='-'?'dropdown':'dropup')+' '+(authentication.user.orderPreference===direction+button.param?'active':'inactive')"
+                    ng-class="(direction==='-'?'dropdown':'dropup')+' '+(authentication.user.orderPreference.substring(1)===button.param?'active':'inactive')"
                     class="btn sortButton">{{button.title}} 
                 <span class="caret"></span>
             </button>
 
         </div>
         </div>
-
-        {{authentication.user.orderPreference}}
 
         <!-- pull-right-->
         <a type="button" class="btn btn-danger pull-right" href="/auth/signout">Log out!</a>
@@ -44,14 +42,19 @@
     </div>
 
     <!-- Content root -->
-    <div class="list-group beerList" ng-init="direction='+'">
+    <div class="list-group beerList" ng-init="direction=authentication.user.orderPreference.substring(0,1)">
 
         <div data-ng-repeat="beer in beers | orderBy:authentication.user.orderPreference" ng-class="beer.bestBefore<now?'':'danger'" ng-class-odd="'odd'" ng-class-even="'even'" class="list-group-item beerListItem">
             <div class="row">
                 <!-- Beer quantity, user can add and remove beers from list view -->
-                <div class="col-md-2 text-center">
+                <div class="col-md-1 text-center">
                     <input type="submit" ng-click="subtractBeer()" class="btn votingButton" value="-">
                     <big data-ng-model="beer.quantity" class="beerQuantity">{{ beer.quantity }}</big><input type="submit" ng-click="incrementBeer()" class="btn votingButton" value="+">
+                </div>
+
+                <!-- ratebeer score -->
+                <div class="col-md-1 text-center">
+                    <big data-ng-model="beer.rateBeerScore" class="rateBeerScore">{{ beer.rateBeerScore }}</big>
                 </div>
 
                 <!-- Beer information, clickable, goes to view-beer.client.view -->
