--- a/public/modules/beers/views/list-beers.client.view.html
+++ b/public/modules/beers/views/list-beers.client.view.html
@@ -4,17 +4,17 @@
         <a type="button" class="btn btn-success" href="/#!/beers/create">+</a>
 
         <!-- "Order by" buttons -->
-        <div class="btn-group inline">
-        <div data-ng-repeat="button in buttons" class="btn-group inline">
+        <div class="btn-group sortButtonWrapper inline">
+            <div data-ng-repeat="button in buttons" class="btn-group sortButtonDiv inline">
 
-            <!-- Button itself, changes the order direction when pressed -->
-            <button ng-click="direction=direction=='+'?'-':'+';authentication.user.orderPreference=direction+button.param;saveOrder();"
-                    ng-class="(direction==='-'?'dropdown':'dropup')+' '+(authentication.user.orderPreference.substring(1)===button.param?'active':'inactive')"
-                    class="btn sortButton">{{button.title}} 
-                <span class="caret"></span>
-            </button>
+                <!-- Button itself, changes the order direction when pressed -->
+                <button ng-click="direction=direction=='+'?'-':'+';authentication.user.orderPreference=direction+button.param;saveOrder();"
+                        ng-class="(direction==='-'?'dropdown':'dropup')+' '+(authentication.user.orderPreference.substring(1)===button.param?'active':'inactive')"
+                        class="btn sortButton inline">{{button.title}} 
+                    <span class="caret"></span>
+                </button>
 
-        </div>
+            </div>
         </div>
 
         <!-- pull-right-->
@@ -44,25 +44,23 @@
     <!-- Content root -->
     <div class="list-group beerList" ng-init="direction=authentication.user.orderPreference.substring(0,1)">
 
-        <div data-ng-repeat="beer in beers | orderBy:authentication.user.orderPreference" ng-class="beer.bestBefore<now?'':'danger'" ng-class-odd="'odd'" ng-class-even="'even'" class="list-group-item beerListItem">
-            <div class="row">
+        <div data-ng-repeat="beer in beers | orderBy:authentication.user.orderPreference" ng-class="beer.bestBefore<now?'':'danger'" ng-class-odd="'odd'" ng-class-even="'even'" class="list-group-item container-fluid beerListItem">
+            <div class="row-fluid">
                 <!-- Beer quantity, user can add and remove beers from list view -->
-                <div class="col-md-1 text-center">
+                <div class="col-md-2 text-center">
                     <input type="submit" ng-click="subtractBeer()" class="btn votingButton" value="-">
                     <big data-ng-model="beer.quantity" class="beerQuantity">{{ beer.quantity }}</big><input type="submit" ng-click="incrementBeer()" class="btn votingButton" value="+">
                 </div>
 
-                <!-- ratebeer score -->
-                <div class="col-md-1 text-center">
-                    <big data-ng-model="beer.rateBeerScore" class="rateBeerScore">{{ beer.rateBeerScore }}</big>
-                </div>
-
                 <!-- Beer information, clickable, goes to view-beer.client.view -->
                 <a href="#!/beers/{{beer._id}}">
-                    <div class="col-md-10">
+                    <div class="col-md-9">
                         <h4 class="list-group-item-heading" data-ng-bind="beer.name"></h4>
                         <span class="text-muted" data-ng-hide="!beer.brewery">by </span><span class="text-muted" data-ng-hide="!beer.brewery" data-n-bind="beer.brewery"></span><span class="text-muted" data-ng-hide="!beer.brewery">, </span>
                         <span data-ng-hide="!beer.bestBefore">best before: </span><span data-ng-bind="beer.bestBefore|date:'mediumDate'"></span>
+
+                        <!-- ratebeer score -->
+                        <big data-ng-model="beer.rateBeerScore" class="rateBeerScore">{{ beer.rateBeerScore }}</big>
                     </div>
                 </a>
 
