--- a/public/modules/beers/views/list-beers.client.view.html
+++ b/public/modules/beers/views/list-beers.client.view.html
@@ -52,6 +52,8 @@
                     <big data-ng-model="beer.quantity" class="beerQuantity">{{ beer.quantity }}</big><input type="submit" ng-click="incrementBeer()" class="btn votingButton" value="+">
                 </div>
 
+                ebin
+
                 <!-- Beer information, clickable, goes to view-beer.client.view -->
                 <a href="#!/beers/{{beer._id}}">
                     <div class="col-md-9">
