--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -34,6 +34,9 @@
 	<!-- Fav Icon -->
 	<link href="/modules/core/img/brand/favicon.ico" rel="shortcut icon" type="image/x-icon">
 
+	<!-- Angular Material Design -->
+	<link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
+
 	<!--Application CSS Files-->
 	{% for cssFile in cssFiles %}<link rel="stylesheet" href="{{cssFile}}">{% endfor %}
 
@@ -56,12 +59,26 @@
 	</script>
 
 	<!--Application JavaScript Files-->
-	{% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %} 
+	{% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
 
 	{% if process.env.NODE_ENV === 'development' %}
 	<!--Livereload script rendered -->
 	<script type="text/javascript" src="http://{{request.hostname}}:35729/livereload.js"></script>
 	{% endif %}
+
+	<!-- Angular Material Design -->
+	<script src="/node_modules/angular/angular.js"></script>
+  <script src="/node_modules/angular-aria/angular-aria.js"></script>
+  <script src="/node_modules/angular-animate/angular-animate.js"></script>
+  <script src="/node_modules/angular-material/angular-material.js"></script>
+  <script>
+
+      // Include app dependency on ngMaterial
+
+      angular.module( 'YourApp', [ 'ngMaterial' ] )
+          .controller("YourController", YourController );
+
+  </script>
 </body>
 
 </html>
