--- a/public/modules/beers/views/list-beers.client.view.html
+++ b/public/modules/beers/views/list-beers.client.view.html
@@ -19,7 +19,7 @@
 
         <!-- pull-right-->
         <a type="button" class="btn btn-danger pull-right" href="/auth/signout">Log out!</a>
-        <li class="dropdown pull-right btn btn-default" style="list-style:none;" id="loggedUser">
+        <li class="dropdown pull-right btn btn-default loggedUser" style="list-style:none;">
             <a href="#" class="dropdown-toggle" type="button" data-toggle="dropdown">
                 <span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
             </a>
